# joulenap

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  config.example.yaml  docker-compose.example.yml
.github/: dependabot.yml
assets/: lockup-preview.html
backend/: pyproject.toml
backend/app/: __init__.py  config.py  hashpw.py  healthcheck.py  main.py  paths.py
backend/app/api/: __init__.py  _apikey.py  _probe.py  auth.py  config.py  dashboard.py  deps.py  guests.py  jobs.py  logs.py  metrics.py  notify.py  power.py  scheduler.py  schemas.py  status.py  update.py  wizard.py  wol.py
backend/app/connectors/: __init__.py  _http.py  _tasks.py  discovery.py  errors.py  net.py  pbs.py  power.py  provision.py  pve.py  ssh.py  sshkey.py  tls.py  wol.py
backend/app/core/: __init__.py  catchup.py  config_store.py  ratelimit.py  scheduler.py  security.py  wizard.py
backend/app/db/: __init__.py  base.py  datastore_stats.py  guest_backups.py  models.py  prune.py  startup.py
backend/app/jobs/: __init__.py  backup_cycle.py  deps.py  gc.py  recorder.py  service.py
backend/app/notify/: __init__.py  apprise_urls.py  messages.py  service.py
backend/tests/: conftest.py  fakes.py  test_api.py  test_api_wizard.py  test_auth.py  test_backup_cycle.py  test_catchup.py  test_config.py  test_config_yaml.py  test_datastore_stats.py  test_db.py  test_deps.py  test_discovery.py  test_guest_backups.py  test_metrics.py  test_net.py  test_notify.py  test_pbs.py  test_power.py  test_provision.py  test_prune.py  test_pve.py  test_ratelimit.py  test_recorder.py  test_scheduler.py  test_service.py  test_ssh.py  test_sshkey.py  test_startup.py  test_tls.py  test_update.py  test_wizard.py  test_wol.py
docs/: ARCHITECTURE.md  INSTALL.md  (+2 more)
(+74 files in other folders)
