[project]
name = "joulenap"
version = "0.6.0"
description = "Self-hosted web UI + scheduler for energy-saving Proxmox backups to a normally-off PBS."
readme = "../README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Joulenap contributors" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "bcrypt>=4.1",
    "itsdangerous>=2.2",      # signed session cookies (Starlette SessionMiddleware)
    "apscheduler>=3.10",      # in-process scheduler (wired in milestone 3)
    "httpx>=0.27",            # PVE/PBS API clients (raw httpx; see app/connectors)
    "paramiko>=3.4",          # SSH poweroff (milestone 2)
    "psutil>=5.9",            # local NIC enumeration for Wake-on-LAN interface binding
    "apprise>=1.8",           # notifications (milestone 7)
    "python-multipart>=0.0.9", # form parsing for FastAPI
    "tzdata>=2024.1",         # IANA tz database for zoneinfo (slim images/Windows lack it)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
joulenap = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection markers are meant to be called in arg defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
